# Nova_SHIFT

./: .env  .env.example  .gitignore  ARCHITECTURE.md  GEMINI_MIGRATION_GUIDE.md  PLANNING.md  README.md  RESEARCH.md  TASK.md  adding_tools.md  ai_swarm_research_output.md  cli.py  debug_gemini_pro.py  dual-protocol-architecture-plan.md  nova-memory-mcp-integration-plan.md  nova_ai_road_to_freedom.md  nova_shift_test_output.md  pyproject.toml  redis_diagnostics.py  requirements.txt  simple_novashift_test.py
agents/: architect_agent.py  developer_agent.py  planner_agent.py  specialist_agent.py
core/: dispatcher.py  learning_engine.py  ltm_interface.py  shared_memory_interface.py  tool_registry.py
nova_shift.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  mixed_scenario_diagnostic.py  test_gemini_cli.py
tests/agents/: __init__.py  test_specialist_agent.py  test_specialist_agent_dynamic_ltm.py
tests/consciousness_tests/: complex_mixed_tests.py  quick_gemini_test.py  test_gemini_consciousness.py
tests/core/: __init__.py  test_dispatcher_fault_tolerance.py  test_learning_engine_scoring.py  test_shared_memory_interface.py  test_tool_registry.py
tests/integration/: test_phase2_flow.py
tests/tools/: __init__.py  test_calculator_toolkit.py  test_file_reader_toolkit.py  test_web_search_toolkit.py
tools/: toolkit_schema.py
tools/browser_use_agent/: browser_use_agent_toolkit.py  toolkit.json
tools/calculator/: __init__.py  calculator_toolkit.py  toolkit.json
tools/file_reader/: __init__.py  (+2 more)
utils/: logging_config.py  sandbox.py
(+7 files in other folders)
